// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-video Captions 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Controlled 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
  >
    Play
  </button>
    
  <button
    class="btn btn--secondary"
  >
    Mute
  </button>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="margin-top: 1em;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Default 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        poster="https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/iphone-thumbnail.jpg"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Fail 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Fail Inside Playlist 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Flexible Container 1`] = `
<DocumentFragment>
  <div
    style="width: 100%;"
  >
    <div
      class="video-player video-player--poster"
      style="width: 600px; height: 400px;"
    >
      <div
        class="video-player__container shaka-video-container"
        data-shaka-player-container=""
        shaka-controls="true"
      >
        <video
          class="shaka-video"
          style="width: 600px; height: 400px;"
        />
        <div
          class="shaka-controls-container"
          shown="true"
        >
          <div
            class="shaka-scrim-container"
          />
          <div
            class="shaka-play-button-container"
          >
            <button
              aria-label="Play"
              class="shaka-play-button shaka-no-propagation"
              icon="play"
            />
          </div>
          <div
            class="shaka-server-side-ad-container"
          />
          <div
            class="shaka-bottom-controls shaka-no-propagation"
          >
            <div
              class="shaka-ad-controls shaka-hidden"
            >
              <div
                class="shaka-ad-position shaka-hidden"
              >
                <span
                  class="shaka-ad-position-span"
                />
              </div>
              <div
                class="shaka-ad-counter"
              >
                <span
                  class="shaka-ad-counter-span"
                />
              </div>
            </div>
            <div
              class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
            />
          </div>
        </div>
        <div
          class="shaka-client-side-ad-container shaka-hidden"
        />
        <div
          class="shaka-spinner-container shaka-hidden"
        >
          <div
            class="shaka-spinner"
            hidden=""
          >
            <svg
              class="shaka-spinner-svg"
              viewBox="0 0 30 30"
            >
              <circle
                class="shaka-spinner-path"
                cx="15"
                cy="15"
                fill="none"
                r="14.5"
                stroke-miterlimit="10"
                stroke-width="1"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="video-player__overlay video-player__overlay--hidden"
      >
        <svg
          aria-hidden="true"
          class="icon icon--attention"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-attention"
          />
        </svg>
        <div
          class="video-player__overlay-text"
        >
          An error has occurred
        </div>
      </div>
      <div
        class="video-player__overlay"
      >
        <span
          aria-label="Loading"
          class="progress-spinner progress-spinner--large"
          role="img"
        >
          <svg
            aria-hidden="true"
            class="icon icon--spinner"
            focusable="false"
            height="24px"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-spinner"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Multiple Videos 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        poster="https://ir.ebaystatic.com/cr/v/c1/ebayui/video/v1/iphone-thumbnail.jpg"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Muted Autoplay 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        autoplay=""
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video No Report Button 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Report Text 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-video Single Video 1`] = `
<DocumentFragment>
  <div
    class="video-player video-player--poster"
    style="width: 600px; height: 400px;"
  >
    <div
      class="video-player__container shaka-video-container"
      data-shaka-player-container=""
      shaka-controls="true"
    >
      <video
        class="shaka-video"
        style="width: 600px; height: 400px;"
      />
      <div
        class="shaka-controls-container"
        shown="true"
      >
        <div
          class="shaka-scrim-container"
        />
        <div
          class="shaka-play-button-container"
        >
          <button
            aria-label="Play"
            class="shaka-play-button shaka-no-propagation"
            icon="play"
          />
        </div>
        <div
          class="shaka-server-side-ad-container"
        />
        <div
          class="shaka-bottom-controls shaka-no-propagation"
        >
          <div
            class="shaka-ad-controls shaka-hidden"
          >
            <div
              class="shaka-ad-position shaka-hidden"
            >
              <span
                class="shaka-ad-position-span"
              />
            </div>
            <div
              class="shaka-ad-counter"
            >
              <span
                class="shaka-ad-counter-span"
              />
            </div>
          </div>
          <div
            class="shaka-controls-button-panel shaka-show-controls-on-mouse-over"
          />
        </div>
      </div>
      <div
        class="shaka-client-side-ad-container shaka-hidden"
      />
      <div
        class="shaka-spinner-container shaka-hidden"
      >
        <div
          class="shaka-spinner"
          hidden=""
        >
          <svg
            class="shaka-spinner-svg"
            viewBox="0 0 30 30"
          >
            <circle
              class="shaka-spinner-path"
              cx="15"
              cy="15"
              fill="none"
              r="14.5"
              stroke-miterlimit="10"
              stroke-width="1"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="video-player__overlay video-player__overlay--hidden"
    >
      <svg
        aria-hidden="true"
        class="icon icon--attention"
        focusable="false"
        height="24px"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="#icon-attention"
        />
      </svg>
      <div
        class="video-player__overlay-text"
      >
        An error has occurred
      </div>
    </div>
    <div
      class="video-player__overlay"
    >
      <span
        aria-label="Loading"
        class="progress-spinner progress-spinner--large"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--spinner"
          focusable="false"
          height="24px"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-spinner"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
